welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:10: error: Unmatched closing brace '}' ignored here
}
^